# cohere-rust

./: .gitignore  Cargo.toml  LICENSE  README.md
.github/workflows/: ci.yml
examples/: chat.rs  check_token.rs  classify.rs  detect_language.rs  detokenize.rs  embed.rs  generate.rs  rerank.rs  summarize.rs  tokenize.rs
src/: lib.rs
src/api/: chat.rs  classify.rs  detect_language.rs  detokenize.rs  embed.rs  generate.rs  mod.rs  rerank.rs  summarize.rs  tokenize.rs
tests/: api.rs
