[package]
name = "cohere-rust"
version = "0.2.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
reqwest = { version = "0.11", features = ["json", "rustls-tls"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
strum_macros = "0.24.3"
thiserror = "1.0"
tokio = { version = "1", features = ["full"] }

[dev-dependencies]
mockito = "1"
