[package]
name = "cohere-rust"
version = "0.5.2"
edition = "2021"
description = "This crate provides a simplified interface with the cohere.ai API in Rust"
homepage = "https://github.com/walterbm/cohere-rust"
documentation = "https://docs.rs/cohere-rust"
license = "MIT"

exclude = ["examples/*", "tests/*", ".github/*"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
reqwest = { version = "0.11", default-features = false, features = [
  "json",
  "rustls-tls",
  "stream",
] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
strum_macros = "0.25.3"
thiserror = "1.0"
tokio = { version = "1", features = ["full"] }

[dev-dependencies]
mockito = "1"
