[package]
name = "cohere-rust"
version = "0.6.0"
edition = "2021"
description = "This crate provides a simplified interface with the Cohere API in Rust"
homepage = "https://github.com/walterbm/cohere-rust"
documentation = "https://docs.rs/cohere-rust"
license = "MIT"

exclude = ["examples/*", "tests/*", ".github/*"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
bytes = "1.7.1"
reqwest = { version = "0.12.7", default-features = false, features = [
  "json",
  "rustls-tls",
  "stream",
] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
strum_macros = "0.26.1"
thiserror = "1.0"
tokio = { version = "1", features = ["full"] }

[dev-dependencies]
mockito = "1"
